Fix: #6 - Fixed form overflow-y scroll

--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: auto;
 
     label {
       display: flex;
